--- a/scss/style.scss
+++ b/scss/style.scss
@@ -910,6 +910,111 @@ body {
     }
 }
 
+// FAQs Page
+#faq-main {
+    padding: 3em 0 7em 0;
+
+    .faq-container {
+
+        .faq-header {
+
+            .content {
+                font-size: .8em;
+                color: $grey-color;
+                margin-top: 1.4em;
+            }
+        }
+
+        .faq-content {
+            
+            .help {
+                position: sticky;
+                top: 1%;
+                background-color: #FAFAFA;
+                padding: 1.6em 1.8em 2em;
+
+                .help-title {
+                    text-align: center;
+                    border-bottom: 2px solid $dark-color;
+                    padding-bottom: .6em;
+                    margin-bottom: 1.5em;
+                    font-size: 1.1em;
+                }
+
+                .help-content {
+                    display: flex;
+                    justify-content: space-around;
+                    text-align: center;
+
+                    .contact-us {
+                        display: flex;
+                        flex-direction: column;
+                        
+                        i {
+                            font-size: 1.7em;
+                        }
+
+                        a {
+                            font-size: .7em;
+                            text-decoration: underline;
+                        }
+                    }   
+                }
+            }
+
+            // Pre Sales and Theme Questions
+            .pre-sales {
+                padding-bottom: 1.5em;
+            }
+           
+            .accordion-question {
+                border-bottom: 1px solid #909195;
+                font-size: .9em;
+
+                .accordion-btn {
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 1.5em 0;
+
+                    .plus-icon {
+                        position: relative;
+                        display: inline-block;
+                        width: 1px;
+                        height: 15px;
+                        background-color: #787878;
+                        vertical-align: middle;
+                        margin-left: .6em;
+                        transition: all .2s linear;
+
+
+                        &:after {
+                            content: "";
+                            display: inline-block;
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-color: #787878;
+                            transform: rotate(90deg);
+                        }
+                    }
+                }
+
+                .answer {
+                    color: $grey-color;
+                    height: 0;
+                    visibility: hidden;
+                    opacity: 0;
+                    transition: all .3s ease-in-out;
+                }
+            }
+
+        }
+    }
+}
+
+
 // Footer
 #footer {
 
@@ -1047,8 +1152,8 @@ body {
                         width: 100%;
 
                             img {
-                                width: 200px;
-                                height: 100%;
+                                width: 190px;
+                                height: 50px;
                             }
 
                         .hamburger {
@@ -1289,10 +1394,10 @@ body {
                         justify-content: space-between;
                         width: 100%;
 
-                            img {
-                                width: 200px;
-                                height: 100%;
-                            }
+                        img {
+                            width: 190px;
+                            height: 50px;
+                        }
 
                         .hamburger {
                             display: block;
@@ -1485,10 +1590,10 @@ body {
                         justify-content: space-between;
                         width: 100%;
 
-                            img {
-                                width: 200px;
-                                height: 100%;
-                            }
+                        img {
+                            width: 190px;
+                            height: 50px;
+                        }
 
                         .hamburger {
                             display: block;
@@ -1499,8 +1604,8 @@ body {
                     .main-nav {
                         display: block;
                         flex-direction: column;
-                        opacity: 0;
                         height: 0;
+                        opacity: 0;
 
                         .main-nav-item {
                             padding-bottom: 1em;
