Some padding updates in login page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -865,6 +865,7 @@ body {
                 // Signup Form
                 .signup-form-container {
                     background-color: #FAFAFA;
+                    padding: 2em;
                     
                     .signupHeading {
                         font-size: 1.1em;
