--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,8 @@ body {
     color: #787878;
     font-size: .8em; }
   #login-main .login .login-section .login-content .signup-form-container {
-    background-color: #FAFAFA; }
+    background-color: #FAFAFA;
+    padding: 2em; }
     #login-main .login .login-section .login-content .signup-form-container .signupHeading {
       font-size: 1.1em;
       margin-bottom: 1.5em; }
