--- a/scss/style.scss
+++ b/scss/style.scss
@@ -863,9 +863,9 @@ body {
                 }
 
                 // Signup Form
-                .signup-form-container {
+                .signup-form-wrapper {
                     background-color: #FAFAFA;
-                    padding: 2.1em;
+                    padding: 2em;
 
                     .signupHeading {
                         font-size: 1.1em;
