--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -46,3 +46,15 @@ ul {
         }
     }
 }
+
+// Blog Page
+// Shared Setting
+.setting {
+    border-bottom: 1px solid #c5c5cf;
+    padding: 2em 0;
+}
+
+// Shared Setting Header
+.setting-header {
+    font-size: 1.2em;
+}
